# levenshtein

./: .gitignore  Cargo.toml  README.md
demo-web/: Cargo.toml
demo-web/pkg/: index.html  style.css
demo-web/src/: lib.rs
examples/: didyoumean.rs
src/: lib.rs
