[package]
name = "demo-web"
description = "Levenshtein Web Demo"
version = "0.1.0"
authors = ["alain"]
edition = "2018"

# build with:
# wasm-pack build --target web --release

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
seed = "0.8"
levenshtein = { path = "../" }

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
